Move tests to ftpserver module and deprecate classes in app module